--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,10 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+		<groupId>javax.validation</groupId>
+		<artifactId>validation-api</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
 			<scope>test</scope>
